<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/elevation"
    android:elevation="@dimen/elevation"
    android:paddingStart="@dimen/paddingStartAdd">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pic"
        android:layout_width="105dp"
        android:layout_height="97dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/feeCart"
        android:textSize="@dimen/marginStartCart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pic"
        app:layout_constraintStart_toStartOf="@+id/pic"
        app:layout_constraintTop_toBottomOf="@+id/pic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#FF9800"
        android:text="@string/$Sign"
        android:textColor="@color/$Color"
        android:textSize="@dimen/marginStartCart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fee"
        app:layout_constraintTop_toTopOf="@+id/fee"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@color/$Color"
        android:paddingStart="@dimen/paddingStartAdd"
        android:paddingTop="@dimen/elevation"
        android:paddingEnd="@dimen/paddingStartAdd"
        android:paddingBottom="@dimen/elevation"
        android:text="@string/add"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pic"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="@+id/pic"
        app:layout_constraintTop_toBottomOf="@+id/fee" />

</androidx.constraintlayout.widget.ConstraintLayout>